# MGLogger

./: CMakeLists.txt  ComposedLogger.cpp  ComposedLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  LICENSE  Logger.cpp  Logger.h  MGLogger.h  NullLogger.cpp  NullLogger.h  README.MD
